[gd_scene load_steps=22 format=3 uid="uid://bqxf5bw44lssj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_kpuub"]
[ext_resource type="Theme" uid="uid://dct7hs523oj4b" path="res://theme.tres" id="1_m78sb"]
[ext_resource type="Texture2D" uid="uid://bvbbnt1ukr0dw" path="res://icons/play.svg" id="2_ebqkn"]
[ext_resource type="Texture2D" uid="uid://b8a6qopaj0mig" path="res://icons/link.svg" id="3_167a8"]
[ext_resource type="Texture2D" uid="uid://catwg08ak322k" path="res://icons/pause.svg" id="4_58rgj"]
[ext_resource type="Texture2D" uid="uid://d1t5rvvfiib02" path="res://icons/trash.svg" id="4_n2gre"]
[ext_resource type="Script" path="res://scripts/clipper.gd" id="4_uyv3h"]
[ext_resource type="Texture2D" uid="uid://b5873cg3bwnwf" path="res://icons/folder.svg" id="6_cyrgy"]
[ext_resource type="Texture2D" uid="uid://htmyiqnygd6j" path="res://icons/more-horizontal.svg" id="8_gisj1"]
[ext_resource type="Script" path="res://scripts/notification_toast.gd" id="8_qqcrc"]
[ext_resource type="Texture2D" uid="uid://mx7hip8lxrd8" path="res://icons/edit-3.svg" id="9_0tbu4"]
[ext_resource type="Texture2D" uid="uid://iay4op5vm52x" path="res://icons/x.svg" id="9_2gh8e"]
[ext_resource type="Texture2D" uid="uid://dh1ansqn8yqis" path="res://icons/external-link.svg" id="10_338of"]
[ext_resource type="Texture2D" uid="uid://dv14r4fk6xqin" path="res://icons/heart.svg" id="11_x10sn"]
[ext_resource type="Texture2D" uid="uid://b4td25gmkxt63" path="res://icons/heart-filled.svg" id="12_rygrl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_634m5"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.117647, 0.117647, 0.117647, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rynph"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.117647, 0.117647, 0.117647, 0)
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l5m60"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.15, 0.15, 0.15, 1)
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njvd7"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.117647, 0.117647, 0.117647, 0)
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_re6do"]
bg_color = Color(0.14, 0.14, 0.14, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7p8kf"]
bg_color = Color(1, 1, 1, 0.470588)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m78sb")
script = ExtResource("1_kpuub")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.04, 0.04, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Local volume"
vertical_alignment = 1

[node name="LocalVolume" type="HSlider" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Remote volume"
vertical_alignment = 1

[node name="RemoteVolume" type="HSlider" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.5

[node name="ToggleVolumeLink" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Link volume sliders"
focus_mode = 0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.309804, 0.392157, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
toggle_mode = true
icon = ExtResource("3_167a8")
flat = true

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Clipper" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
script = ExtResource("4_uyv3h")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Clipper"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Clipper/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Devices"

[node name="ClipperDevicesList" type="LineEdit" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Example: cable output, default"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ClipperStatusText" type="RichTextLabel" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Status: [color=#ff7777]STOPPED[/color]"
fit_content = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ClipperStartButton" type="Button" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "START"

[node name="ClipperStopButton" type="Button" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "STOP"

[node name="ClipperExportButton" type="Button" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "EXPORT LAST 30 SECONDS"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ClipperClipsContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ClipperClipItem" type="HBoxContainer" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/ClipperClipsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ClipButton" type="Button" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/ClipperClipsContainer/ClipperClipItem"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/ClipperClipsContainer/ClipperClipItem"]
layout_mode = 2
icon = ExtResource("4_n2gre")

[node name="TTS" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/TTS"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/TTS/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TTSVoiceSelection" type="OptionButton" parent="VBoxContainer/TabContainer/TTS/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 0
fit_to_longest_item = false
popup/item_0/text = "TikTok"
popup/item_0/id = 0
popup/item_1/text = "Google US"
popup/item_1/id = 1
popup/item_2/text = "Google UK"
popup/item_2/id = 2
popup/item_3/text = "Google India"
popup/item_3/id = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/TTS/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/TTS/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Text"

[node name="TTSField" type="LineEdit" parent="VBoxContainer/TabContainer/TTS/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_length = 299

[node name="PlayTTS" type="Button" parent="VBoxContainer/TabContainer/TTS/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play TTS"

[node name="ExportTTS" type="Button" parent="VBoxContainer/TabContainer/TTS/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save TTS to File"

[node name="SoundboardTabItem" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/SoundboardTabItem"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="SearchField" type="HBoxContainer" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/SearchField"]
layout_mode = 2
text = "Search"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/SearchField"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Items" type="VBoxContainer" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="SoundboardDirItem" type="VBoxContainer" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardDirItem"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 0

[node name="Contents" type="HBoxContainer" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardDirItem/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardDirItem/Button/Contents"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6_cyrgy")
stretch_mode = 3

[node name="Name" type="Label" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardDirItem/Button/Contents"]
layout_mode = 2
text = "Soundboard Folder"
vertical_alignment = 1

[node name="Count" type="Label" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardDirItem/Button/Contents"]
modulate = Color(1, 1, 1, 0.254902)
layout_mode = 2
size_flags_horizontal = 3
text = "0 items   "
horizontal_alignment = 2
vertical_alignment = 1

[node name="ItemsContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardDirItem"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Items" type="VBoxContainer" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardDirItem/ItemsContainer"]
layout_mode = 2

[node name="SoundboardItem" type="Button" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 0

[node name="Contents" type="HBoxContainer" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardItem"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayIcon" type="TextureRect" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardItem/Contents"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_ebqkn")
stretch_mode = 3

[node name="Name" type="Label" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardItem/Contents"]
layout_mode = 2
text = "Soundboard Item"
vertical_alignment = 1

[node name="Right" type="HBoxContainer" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardItem/Contents"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 2

[node name="MoreOptions" type="MenuButton" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardItem/Contents/Right"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_634m5")
icon = ExtResource("8_gisj1")
flat = false
item_count = 2
popup/item_0/text = "Rename"
popup/item_0/icon = ExtResource("9_0tbu4")
popup/item_0/id = 0
popup/item_1/text = "Open in Audacity"
popup/item_1/icon = ExtResource("10_338of")
popup/item_1/id = 1

[node name="FavoriteButton" type="Button" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardItem/Contents/Right"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_rynph")
theme_override_styles/hover = SubResource("StyleBoxFlat_l5m60")
theme_override_styles/focus = SubResource("StyleBoxFlat_njvd7")
icon = ExtResource("11_x10sn")
metadata/icon = ExtResource("11_x10sn")
metadata/icon_filled = ExtResource("12_rygrl")

[node name="Control" type="Control" parent="VBoxContainer/TabContainer/SoundboardTabItem/MarginContainer/VBoxContainer/Items/SoundboardItem/Contents/Right"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="+" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Controls" type="PanelContainer" parent="VBoxContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_re6do")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Controls"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="VBoxContainer/Controls/MarginContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_ebqkn")
flat = true
icon_alignment = 1
metadata/play_icon = ExtResource("2_ebqkn")
metadata/pause_icon = ExtResource("4_58rgj")

[node name="Seek" type="HSlider" parent="VBoxContainer/Controls/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 100000.0
step = 1024.0
value = 2048.0

[node name="Stop" type="Button" parent="VBoxContainer/Controls/MarginContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("9_2gh8e")
flat = true
icon_alignment = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(455, 377)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.exe")

[node name="NotificationToast" type="MarginContainer" parent="."]
modulate = Color(1, 0.333333, 0.333333, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40
script = ExtResource("8_qqcrc")

[node name="PanelContainer" type="PanelContainer" parent="NotificationToast"]
self_modulate = Color(1, 1, 1, 0.266667)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7p8kf")

[node name="MarginContainer" type="MarginContainer" parent="NotificationToast/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NotificationToast/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NotificationToast/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ERROR"

[node name="Body" type="Label" parent="NotificationToast/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "This is a really long test or something idk."

[node name="Timer" type="Timer" parent="NotificationToast"]

[node name="DirectoryDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 4
size = Vector2i(434, 372)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="SaveFileDialog" type="FileDialog" parent="."]
initial_position = 4
size = Vector2i(629, 357)
access = 2
filters = PackedStringArray("*.mp3")

[node name="RenameDialog" type="ConfirmationDialog" parent="."]
title = "Rename"
initial_position = 4
size = Vector2i(600, 100)

[node name="Field" type="LineEdit" parent="RenameDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 592.0
offset_bottom = 53.0
placeholder_text = "Enter new file name..."

[connection signal="value_changed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/LocalVolume" to="." method="_on_local_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/RemoteVolume" to="." method="_on_remote_volume_value_changed"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/HBoxContainer/ToggleVolumeLink" to="." method="_on_toggle_volume_link_toggled"]
[connection signal="tab_clicked" from="VBoxContainer/TabContainer" to="." method="_on_tab_container_tab_clicked"]
[connection signal="focus_exited" from="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/HBoxContainer/ClipperDevicesList" to="VBoxContainer/TabContainer/Clipper" method="_on_clipper_devices_list_focus_exited"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/HBoxContainer2/ClipperStartButton" to="VBoxContainer/TabContainer/Clipper" method="_on_clipper_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/HBoxContainer2/ClipperStopButton" to="VBoxContainer/TabContainer/Clipper" method="_on_clipper_stop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Clipper/MarginContainer/VBoxContainer/ClipperExportButton" to="VBoxContainer/TabContainer/Clipper" method="_on_clipper_export_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/TabContainer/TTS/MarginContainer/VBoxContainer/TTSVoiceSelection" to="." method="_on_tts_voice_selection_item_selected"]
[connection signal="pressed" from="VBoxContainer/TabContainer/TTS/MarginContainer/VBoxContainer/PlayTTS" to="." method="_on_play_tts_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/TTS/MarginContainer/VBoxContainer/ExportTTS" to="." method="_on_export_tts_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls/MarginContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="value_changed" from="VBoxContainer/Controls/MarginContainer/HBoxContainer/Seek" to="." method="_on_seek_value_changed"]
[connection signal="pressed" from="VBoxContainer/Controls/MarginContainer/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="timeout" from="NotificationToast/Timer" to="NotificationToast" method="_on_timer_timeout"]
